#![windows_subsystem = "windows"]

[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
log = "0.4.27"
regex = "1.11.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
